Fixed visibility of empty Result Cell

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h1 {
 }
 
 .choice {
-   display: flex;
+   display: none;
    flex-direction: column;
    max-height: 180px;
    align-items: center;
